<resources>
    <string name="app_name">Multipurpose project</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="logout">Logout</string>
    <string name="calculator1">Calculator</string>
    <string name="welcome_to_the_audio_player">Welcome to the Audio player</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="camera">Camera</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_video_recorder">Welcome to Video Recorder</string>
    <string name="record">Record</string>
    <string name="menu">Menu</string>
    <string name="todo2">TODO</string>
    <string name="pause2">Pause</string>
    <string name="welcome_to_the_video_player">Welcome to the Video player</string>
    <string name="play2">Play</string>
    <string name="enter_number_to_call">Enter number to call</string>
    <string name="enter_number_to_send">Enter number to send</string>
    <string name="enter_your_message_here">Enter message here</string>
    <string name="quiz">   Quiz</string>
    <string name="wifi">Wifi</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="enter_angle">Enter angle</string>
    <string name="calculator">Calculator</string>
    <string name="sin">Sin</string>
    <string name="cos">COS</string>
    <string name="tan">Tan</string>
    <string name="clr">CLR</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="logout2">Logout</string>
    <string name="torch">Torch</string>
    <string name="camera2">Camera</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="videoplayer">Videoplayer</string>
    <string name="audioplayer">Audioplayer</string>
    <string name="chrome">Chrome</string>
    <string name="phone">Phone</string>
    <string name="sms">Sms</string>
    <string name="quiz2">Quiz</string>
</resources>