<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView46"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="136dp"
        app:srcCompat="@drawable/quiz" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView24"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="342dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="26dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView24"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="-11dp"
        android:fontFamily="@font/u4"
        android:text="@string/logout"
        android:textColor="#000000"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="22dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_baseline_power_settings_new_24"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="76dp"
        android:background="#756E6E" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="119dp"
        app:srcCompat="@drawable/calci" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="194dp"
        android:fontFamily="@font/u4"
        android:text="@string/calculator"
        android:textColor="#000000"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        app:srcCompat="@drawable/torch" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="190dp"
        android:fontFamily="@font/u4"
        android:text="@string/torch"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/u4"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="45dp"
        app:srcCompat="@drawable/c1" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="254dp"
        app:srcCompat="@drawable/bluetooth" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="331dp"
        android:fontFamily="@font/u4"
        android:text="@string/bluetooth"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="170dp"
        app:srcCompat="@drawable/video" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="331dp"
        android:fontFamily="@font/u4"
        android:text="@string/videoplayer"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="45dp"
        app:srcCompat="@drawable/audio" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/u4"
        android:text="@string/audioplayer"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="269dp"
        app:srcCompat="@drawable/browser" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="248dp"
        android:fontFamily="@font/u4"
        android:text="@string/chrome"
        android:textColor="#000000"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="269dp"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="248dp"
        android:fontFamily="@font/u4"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="269dp"
        app:srcCompat="@drawable/sms" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="249dp"
        android:fontFamily="@font/u4"
        android:text="@string/sms"
        android:textColor="#000000"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="137dp"
        app:srcCompat="@drawable/wifi" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginBottom="118dp"
        android:fontFamily="@font/u4"
        android:text="@string/wifi"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:fontFamily="@font/u4"
        android:text="@string/quiz"
        android:textColor="#000000"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap" />

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp"
        android:background="@color/black" />

</RelativeLayout>