<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:background="@color/white">

    <EditText
        android:id="@+id/etnum2"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="481dp"
        android:background="@drawable/bg_design10"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="15dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etnum1"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:autofillHints=""
        android:background="@drawable/bg_design10"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="15dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="223dp" />

    <EditText
        android:id="@+id/etangle"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="277dp"
        android:background="@drawable/bg_design10"
        android:ems="10"
        android:hint="@string/enter_angle"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="50dp"
        android:paddingBottom="12dp"
        android:autofillHints="" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="101dp"
        android:background="@color/black" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="348dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_design6"
        android:fontFamily="@font/u4"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/calculator"
        android:textColor="#FF0000"
        android:textSize="50sp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/cal"
        android:contentDescription="@string/todo" />


</RelativeLayout>